todoapp-helm-chart/templates/_compose-todo/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 80
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
