todoapp-helm-chart/templates/_compose-todo/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "8088"
      port: 8088
      targetPort: 80
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
