todoapp-helm-chart/templates/_compose-todo/front-tier-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: front-tier
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/front-tier: "true"
  podSelector:
    matchLabels:
      io.kompose.network/front-tier: "true"
